<resources>
    <string name="app_name">Fashion Advisor</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_tabbed">MainTabbed</string>
    <string name="today">This is the today tab</string>
    <string name="plan">This is the plan tab</string>
    <string name="wardrobe">This is the wardrobe tab</string>
    <string name="settings">This is the settings tab</string>
    <string name="edit_name">Enter your name</string>
    <string name="name_button">Enter</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_title">Gender</string>
    <string name="settings_confirm">Confirm</string>
    <string name="name_default">Name</string>
    <string name="radio_other">Other</string>
    <string name="add_item_name">Enter Item Name:</string>
    <string-array name = "item_types">
        <item>Shirt</item>
        <item>Pants</item>
    </string-array>
    <string name="title_type_spinner">Type</string>
    <string name="title_temp_slider">Temperature Range</string>
    <string name="title_color_picker">Color</string>
    <string name="addSample">Add Sample Closet</string>
    <string name="tempLabel">Temperature Slider</string>
    <string name="minTemp">-20F</string>
    <string name="maxTemp">110F</string>
    <string name="makeOutfit">Make Outfit</string>
    <string name="formalityLabel">Formality Level:</string>
    <string name="formalButton">Formal</string>
    <string name="businessCasualButton">Business Casual</string>
    <string name="casualButton">Casual</string>
    <string name="athleticButton">Athletic</string>
    <string name="sleepwearButton">Sleepwear</string>
    <string name="textureLabel">Texture</string>
    <string name="tempsLabel">Ideal Temperature</string>
    <string name="patternLabel">Has Pattern</string>
</resources>
