<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.Today">

    <TextView
        android:id="@+id/sliderTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="viewEnd"
        android:gravity="end"
        android:textSize="10sp" />


    <Button
        android:id="@+id/addSample"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/addSample" />

    <SeekBar
        android:id="@+id/tempBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:progress="80"
        android:layout_width="184dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:clickable="false"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp" />


    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tempBar"
        android:layout_alignStart="@+id/tempBar"
        android:layout_below="@+id/tempBar"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/tempLabel"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tempBar"
        android:layout_alignStart="@+id/tempBar"
        android:layout_below="@+id/tempBar"
        android:text="@string/minTemp"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tempBar"
        android:layout_alignRight="@+id/tempBar"
        android:layout_below="@+id/tempBar"
        android:text="@string/maxTemp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textSize="10sp" />

    <Button
        android:id="@+id/makeOutfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/maxTemp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/maxTemp"
        android:layout_marginBottom="10dp"
        android:text="@string/makeOutfit" />

    <ImageView
        android:id="@+id/botView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@android:drawable/ic_delete"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/sliderTrackText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/topView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="11dp"
        android:adjustViewBounds="false"
        app:srcCompat="@android:drawable/ic_delete"
        android:layout_above="@+id/sliderTrackText"
        android:layout_alignLeft="@+id/botView"
        android:layout_alignStart="@+id/botView" />

    <RadioGroup
        android:id="@+id/formalityRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/makeOutfit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/formalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/businessCasualButton"
            android:layout_toEndOf="@+id/formalityRadio"
            android:layout_toRightOf="@+id/formalityRadio"
            android:layout_weight="1"
            android:text="@string/formalButton" />

        <RadioButton
            android:id="@+id/businessCasualButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/formalityRadio"
            android:layout_toEndOf="@+id/casualButton"
            android:layout_toRightOf="@+id/casualButton"
            android:layout_weight="1"
            android:text="@string/businessCasualButton" />

        <RadioButton
            android:id="@+id/casualButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/formalityRadio"
            android:layout_alignLeft="@+id/formalityRadio"
            android:layout_alignStart="@+id/formalityRadio"
            android:layout_weight="1"
            android:text="@string/casualButton" />

        <RadioButton
            android:id="@+id/athleticButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/athleticButton" />

        <RadioButton
            android:id="@+id/sleepwearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sleepwearButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/formalityRadio"
        android:layout_alignLeft="@+id/formalityRadio"
        android:layout_alignStart="@+id/formalityRadio"
        android:text="@string/formalityLabel" />

</RelativeLayout>