<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cosc625.fashionadvisor.AddItemActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <Spinner
        android:id="@+id/formalityLevel"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:entries="@array/formalityLevels"
        android:spinnerMode="dropdown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/addItemName"
        app:layout_constraintTop_toBottomOf="@+id/idealTemps" />

    <Spinner
        android:id="@+id/idealTemps"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:entries="@array/idealTemps"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/addItemName"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textures" />

    <Spinner
        android:id="@+id/textures"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:entries="@array/textures"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_items"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/addItemName" />

    <EditText
        android:id="@+id/addItemName"
        android:layout_width="169dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/add_item_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/articlePicture"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/item_types"
        android:spinnerMode="dropdown"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/addItemName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_type_spinner"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_items"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_color_picker"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/color_picker"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <view
        android:id="@+id/color_picker"
        class="com.github.danielnilsson9.colorpickerview.view.ColorPickerView"
        android:layout_width="225dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/articlePicture"
        android:layout_width="171dp"
        android:layout_height="329dp"
        app:srcCompat="@drawable/ic_splash"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/color_picker"
        tools:layout_editor_absoluteX="197dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:text="@string/textureLabel"
        app:layout_constraintBottom_toTopOf="@+id/textures"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tempsLabel"
        app:layout_constraintBottom_toTopOf="@+id/idealTemps"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="16dp"
        android:text="@string/formalityLabel"
        app:layout_constraintBottom_toTopOf="@+id/formalityLevel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/patternLabel"
        app:layout_constraintBottom_toTopOf="@+id/color_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formalityLevel" />

</android.support.constraint.ConstraintLayout>
